# stock-market-prediction

./: .gitignore  CONTRIBUTING  Dockerfile.airflow  Dockerfile.dev  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-dashboard.txt  requirements-dev.txt  requirements.txt
.github/workflows/: run-tests.yml
configs/: main.yaml
configs/deployment/: deployment_cfg.yaml
configs/evaluation/: eval_cfg.yaml
configs/train/: train_cfg.yaml
dags/: download_full_data.py  fetch_tickers_list.py  get_train_results.py  prepare_data_for_training.py  run_inference.py  train_model.py
metadata/tickers_list/: sp500_tickers_list_2025_07_18.json  sp500_tickers_list_2025_08_06.json
notebooks/: fetch_stock_data.ipynb  fetch_tickers.ipynb  get_future_predictions.ipynb  get_inference_results.ipynb  get_train_results.ipynb  lstm_data_preparation.ipynb  nn_data_preparation.ipynb  update_stock_data.ipynb
predictions/AAPL/: plot.json  predictions.csv  predictions_averaged.csv  predictions_log.csv  real_time_inference.html
predictions/GOOGL/: plot.json  predictions.csv  predictions_averaged.csv  real_time_inference.html
src/data/: stocks.py  tickers.py  validation.py
src/data_extractor/: stocks.py  tickers.py
src/evaluation/: metrics.py  plots.py  results.py  utils.py
src/inference/: models.py  predictions.py
src/training/: feature_engineering.py  loss_functions.py  models.py  predictions.py  preparation.py  trainers.py  training_pipeline.py  utils.py
src/utils/: checks.py  config.py  (+2 more)
templates/: dashboard.html  not_found.html
(+450 files in other folders)
